--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,43 @@
 body {
   font-family: 'Poppins';
 }
+.App {
+  font-size: 1.2em;
+  margin: 10px auto;
+  width: 100%;
+  max-width: 1200px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.big-circle {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: -1;
+  opacity: 0.7;
+  height: 80%;
+}
+.mid-circle {
+  position: absolute;
+  top: 30%;
+  right: 30%;
+  z-index: -1;
+  height: 60%;
+  opacity: 0.5;
+}
+.small-circle {
+  position: absolute;
+  bottom: 0%;
+  left: 20%;
+  z-index: -1;
+}
+@media screen and (max-width: 768px) {
+  .App {
+    margin-top: 5px;
+    padding-top: 0px;
+  }
+  .small-circle {
+    position: relative;
+    height: 20px;
+  }
+}
