--- a/frontend/src/pages/styles/Landing.css
+++ b/frontend/src/pages/styles/Landing.css
@@ -27,7 +27,7 @@
 }
 .intro-text p {
   margin-top: 5px;
-  font-size: 22px;
+  font-size: 24px;
   color: rgb(32, 39, 43);
 }
 
@@ -43,7 +43,7 @@
   filter: drop-shadow(0px 7px 4px black);
   animation: drop 1.5s ease;
 }
-.big-circle {
+/* .big-circle {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -64,7 +64,7 @@
   bottom: 0%;
   left: 20%;
   z-index: -1;
-}
+} */
 @keyframes drop {
   0% {
     opacity: 0;
@@ -90,15 +90,15 @@
     font-size: 18px;
   }
   .cover img {
-    height: 50vh;
+    height: 40vh;
   }
-  .small-circle {
+  /* .small-circle {
     position: relative;
     height: 20px;
-  }
+  } */
 }
 @media screen and (max-width: 400px) {
   .cover img {
-    height: 40vh;
+    height: 35vh;
   }
 }
